fixing modal issue on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -495,6 +495,10 @@ body.section-0 #map { opacity:0.5; }
         font-size:12px;
         line-height:16px;
     }
+    .formWrapper{
+        overflow: scroll;
+        height: 600px;
+    }
 
     #modal-trigger{
         top: 80%!important;
@@ -557,7 +561,6 @@ body.section-0 #map { opacity:0.5; }
     }
     #myModal{
         top:0;
-        overflow: scroll;
     }
     .reveal-modal{
         position : fixed;
